--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -73,6 +73,8 @@ models:
         resolver: true
       applications:
         resolver: true
+      skills:
+        resolver: true
   Milestone:
     fields:
       job:
