--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -75,6 +75,8 @@ models:
         resolver: true
       skills:
         resolver: true
+      viewerHasApplied:
+        resolver: true
   Milestone:
     fields:
       job:
