--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -100,3 +100,10 @@ models:
         resolver: true
       jobStats:
         resolver: true
+
+  SearchResult:
+    fields:
+      jobs:
+        resolver: true
+      users:
+        resolver: true
