--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.5'
 services:
   db:
     image: postgres:alpine
@@ -6,7 +6,9 @@ services:
     env_file:
       - .env
     ports:
-     - 5432:5432
+      - 5432:5432
+    networks:
+      - innersource
 
   migrate:
     image: migrate/migrate
@@ -20,6 +22,8 @@ services:
     env_file:
       - .env
     restart: on-failure
+    networks:
+      - innersource
 
   api:
     build:
@@ -41,3 +45,9 @@ services:
     env_file:
       - .env
     restart: always
+    networks:
+      - innersource
+
+networks:
+  innersource:
+      name: innersource
