--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,22 @@ services:
     ports:
       - 5432:5432
 
+  pgadmin:
+    image: dpage/pgadmin4:4.18
+    restart: always
+    env_file:
+      - .env
+    logging:
+      driver: none
+    ports:
+      - "5000:5000"
+    links:
+      - "db:pgsql-server"
+
   migrate:
     image: migrate/migrate
     volumes:
-    - ./repository/migrations:/migrations
+    - ./migrations:/migrations
     command: ["-path", "/migrations", "-database",  "postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?sslmode=disable", "up"]
     links:
       - db
@@ -27,9 +39,9 @@ services:
       dockerfile: Dockerfile
       args:
         SERVER_PORT: ${SERVER_PORT}
-    ports:
-      - ${SERVER_PORT}:${SERVER_PORT}
-    links: 
+    env_file:
+      - .env
+    links:
       - db
       - migrate
     depends_on:
@@ -40,6 +52,6 @@ services:
       port: 5432
       sslmode: disable
       SERVER_PORT: ${SERVER_PORT}
-    env_file:
-      - .env
+    ports:
+    - ${SERVER_PORT}:${SERVER_PORT}
     restart: always
