Add review mutations

--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -100,3 +100,7 @@ models:
         resolver: true
       jobStats:
         resolver: true
+  Review:
+    fields:
+      createdFor:
+        resolver: true
