--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -100,6 +100,8 @@ models:
         resolver: true
       jobStats:
         resolver: true
+      reviews:
+        resolver: true
   Review:
     fields:
       createdFor:
