Added paginated query for user notifications

--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -77,6 +77,16 @@ models:
         resolver: true
       viewerHasApplied:
         resolver: true
+
+  NotificationItem:
+    fields:
+      recipient:
+        resolver: true
+      sender:
+        resolver: true
+      job:
+        resolver: true
+
   Milestone:
     fields:
       job:
